--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -11,7 +11,12 @@
    <% end %>
   </div>
   <div class="todo_item">
-   <p style="opacity: 0.4;"><strike><%= todo_item.content %></strike></p>
+   <p style="opacity: 0.4;"><strike><%= "Content: " + todo_item.content %></strike></p>
+   <p style="opacity: 0.4;"><strike><%= "Priority: " + todo_item.priority %></strike></p>
+   <p style="opacity: 0.4;"><strike>
+    <%= "Deadline: " %>
+    <%= todo_item.deadline %>
+   </strike></p>
   </div>
   <div class="trash">
    <%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } do %>
@@ -25,7 +30,12 @@
    <% end %>
   </div>
   <div class="todo_item">
-   <p><%= todo_item.content %></p>
+   <p><%= "Content: " + todo_item.content %></p>
+   <p><%= "Priority: " + todo_item.priority %></p>
+   <p>
+    <%= "Deadline: " %>
+    <%= todo_item.deadline %>
+   </p>
   </div>
   <div class="trash">
    <%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } do %>
